[tool.poetry]
name = "airbnb-django2"
version = "0.1.0"
description = ""
authors = ["nature1339 <76989460+nature1339@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
